# MAX17048-smbus

./: .gitignore  .readthedocs.yaml  LICENSE  README.md  pyproject.toml
docs/source/: api_overview.rst  conf.py  index.rst  install.rst  usage.rst
docs/source/api/: core_module.rst  main_class.rst
docs/source/api/internals/: i2c_device.rst  index.rst  register.rst
docs/source/ext/: autodoc_docstringclass.py
max1704x_smbus/: __init__.py  core.py  i2c_device.py  protocols.py  register.py  smbus_loader.py
tests/: conftest.py  test_i2c_device.py  test_register.py
